--- a/layout-bootsrtrap-greed/exemple.html
+++ b/layout-bootsrtrap-greed/exemple.html
@@ -27,8 +27,8 @@
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi doloribus assumenda facere accusantium quos asperiores, illum aliquid consequatur, corporis in iusto. Pariatur adipisci dolorem rem tenetur tempore est itaque hic!</p>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad corporis deleniti accusamus sapiente, similique, tenetur. Tempora soluta ab, ratione, atque obcaecati doloribus corporis exercitationem porro dicta aspernatur aliquid aliquam esse.</p>
 </article>
-</div>
-<aside class="col-md-4 col-md-3 col-md-pool-8">
+
+<aside class="col-md-4 col-md-3 col-md-pull-8">
   <ul>
     <li><a href="">categoty1</a></li>
     <li><a href="">categoty2</a></li>
@@ -38,7 +38,8 @@
     <li><a href="">categoty6</a></li>
     <li><a href="">categoty7</a></li>
   </ul>
-</aside>
+ </aside>
+ </div>
 </section>
 <footer  class="container">
   <div class="row">
